tests/compile_fail/state_macro_malformed_transition.stderr
error: expected `=>`
 --> tests/compile_fail/state_macro_malformed_transition.rs:7:30
  |
7 |                 start.value(): Run,
  |                              ^
